--- a/.github/workflows/lambdas-mngd-env-deploy.yml
+++ b/.github/workflows/lambdas-mngd-env-deploy.yml
@@ -87,17 +87,12 @@ jobs:
           # Build and publish
           dotnet publish "$project_dir" -c Release -o "$project_dir/publish" -r linux-x64 --self-contained
           
-          if find "$project_dir/publish" -name "*.deps.json"; then
-              echo "✅ .deps.json file exists in $project_dir/publish"
-          else
-              echo "❌ .deps.json file is missing! Check your build settings."
-          fi
+          echo "Publish content - $project_dir/publish:"
+          -l $project_dir/publish
 
           # Zip function
           zip -r "$short_name.zip" "$project_dir/publish"
           echo "Lambda zipped - $short_name.zip"
-          echo "Zip content:"
-          unzip -l "$project_dir/lambda_package.zip"
 
           # Deploy to AWS Lambda
           function_name="${short_name}-${{ vars.ENV }}"
