Added more logs

--- a/.github/workflows/lambdas-mngd-env-deploy.yml
+++ b/.github/workflows/lambdas-mngd-env-deploy.yml
@@ -91,15 +91,18 @@ jobs:
           ls -l $project_dir/publish
 
           # Zip function
+          echo "Zipping - $short_name.zip"
           zip -r "$short_name.zip" "$project_dir/publish"
           echo "Lambda zipped - $short_name.zip"
 
           # Deploy to AWS Lambda
           function_name="${short_name}-${{ vars.ENV }}"
+          echo "Updating lambda - $short_name.zip"
           aws lambda update-function-code --function-name "$function_name" --zip-file fileb://"$short_name.zip"
           echo "Lambda updated - $function_name"
 
           # Cleanup
+          echo "Removing zip - $short_name.zip"
           rm "$short_name.zip"
           echo "Zip removed - $short_name.zip"
         done
