--- a/.github/workflows/lambdas-mngd-env-deploy.yml
+++ b/.github/workflows/lambdas-mngd-env-deploy.yml
@@ -87,12 +87,10 @@ jobs:
           # Build and publish
           dotnet publish "$project_dir" -c Release -o "$project_dir/publish" -r linux-x64 --self-contained
           
-          echo "Publish content - $project_dir/publish:"
-          ls -l $project_dir/publish
-
-          # Zip function
+          cd "$project_dir/publish"
+          
           echo "Zipping - $short_name.zip"
-          zip -r "$short_name.zip" "$project_dir/publish"
+          zip -r "../$short_name.zip" .
           echo "Lambda zipped - $short_name.zip"
 
           # Deploy to AWS Lambda
