Updated zip location

--- a/.github/workflows/lambdas-mngd-env-deploy.yml
+++ b/.github/workflows/lambdas-mngd-env-deploy.yml
@@ -87,17 +87,17 @@ jobs:
           # Build and publish
           dotnet publish "$project_dir" -c Release -o "$project_dir/publish" -r linux-x64 --self-contained
           
-          cd "$project_dir/publish"
+          cd "$project_dir"
 
           echo "Zipping - $short_name.zip"
-          zip -r "../$short_name.zip" .
+          zip -r "$short_name.zip" "publish/"
           echo "Lambda zipped - $short_name.zip"
 
-          # Deploy to AWS Lambda
           function_name="${short_name}-${{ vars.ENV }}"
+
+          # Deploy to AWS Lambda
           echo "Updating lambda - $short_name.zip"
           aws lambda update-function-code --function-name "$function_name" --zip-file fileb://"$project_dir/$short_name.zip"
-
           echo "Lambda updated - $function_name"
 
           # Cleanup
