--- a/.github/workflows/lambdas-mngd-env-deploy.yml
+++ b/.github/workflows/lambdas-mngd-env-deploy.yml
@@ -93,8 +93,8 @@ jobs:
           zip -r "$short_name.zip" "publish/"
           echo "Lambda zipped - $short_name.zip"
 
+          project_dir=$(realpath "$project_dir")
           function_name="${short_name}-${{ vars.ENV }}"
-          pwd
 
           # Deploy to AWS Lambda
           echo "Updating lambda - $short_name.zip"
