--- a/.github/workflows/lambdas-mngd-env-deploy.yml
+++ b/.github/workflows/lambdas-mngd-env-deploy.yml
@@ -87,18 +87,17 @@ jobs:
           # Build and publish
           dotnet publish "$project_dir" -c Release -o "$project_dir/publish" -r linux-x64 --self-contained
           
-          cd "$project_dir"
+          cd "$project_dir/publish"
 
           echo "Zipping - $short_name.zip"
-          zip -r "$short_name.zip" "publish/"
+          zip -r "$short_name.zip" ./*
           echo "Lambda zipped - $short_name.zip"
 
-          # project_dir="$(cd "$project_dir" && pwd)"
           function_name="${short_name}-${{ vars.ENV }}"
 
           # Deploy to AWS Lambda
           echo "Updating lambda - $short_name.zip"
-          aws lambda update-function-code --function-name "$function_name" --zip-file fileb://$short_name.zip
+          aws lambda update-function-code --function-name "$function_name" --zip-file fileb://$short_name.zip"
           echo "Lambda updated - $function_name"
 
           # Cleanup
