Added sample code to the hanlder lambda

--- a/Rhyme.Net.Handlers.OrderEventsHandlerLambda/src/Rhyme.Net.Handlers.OrderEventsHandlerLambda/Rhyme.Net.Handlers.OrderEventsHandlerLambda.csproj
+++ b/Rhyme.Net.Handlers.OrderEventsHandlerLambda/src/Rhyme.Net.Handlers.OrderEventsHandlerLambda/Rhyme.Net.Handlers.OrderEventsHandlerLambda.csproj
@@ -8,7 +8,7 @@
     <PublishReadyToRun>true</PublishReadyToRun>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Amazon.Lambda.APIGatewayEvents" />
+    <PackageReference Include="Amazon.Lambda.DynamoDBEvents" />
     <PackageReference Include="Amazon.Lambda.Core" />
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" />
   </ItemGroup>
