--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -2,6 +2,7 @@
   <ItemGroup>
     <PackageVersion Include="Amazon.Lambda.APIGatewayEvents" Version="2.7.1" />
     <PackageVersion Include="Amazon.Lambda.Core" Version="2.5.0" />
+    <PackageVersion Include="Amazon.Lambda.DynamoDBEvents" Version="3.1.1" />
     <PackageVersion Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.4.4" />
     <PackageVersion Include="Ardalis.GuardClauses" Version="4.5.0" />
     <!-- <PackageVersion Include="Ardalis.HttpClientTestExtensions" Version="4.2.0" /> -->
