--- a/.github/workflows/lambdas-mngd-env-deploy.yml
+++ b/.github/workflows/lambdas-mngd-env-deploy.yml
@@ -50,33 +50,34 @@ jobs:
     - name: Get changed projects
       id: changed-projects
       run: |
+        set -x
         dict="{}"
 
-        # Detect what commit range to diff
         if git rev-parse HEAD^ >/dev/null 2>&1; then
           diff_range="HEAD^ HEAD"
         else
-          diff_range="HEAD"
+          # This case is for the very first commit, or if you want to see uncommitted changes relative to HEAD
+          diff_range="HEAD" # Still compares to HEAD, which won't show uncommitted.
         fi
-        
+
         # Loop through all csproj files
         for project in $(find . -name '*.csproj'); do
           project_dir=$(dirname "$project")
           project_name=$(basename "$project" .csproj)
-        
+
           if [[ "$project_name" == *Lambda ]]; then
             if git diff --name-only $diff_range | grep -q "^${project_dir#/}/"; then
               echo "Found changes in project: $project_name at $project_dir"
-        
+          
               # Append to JSON dictionary
               dict=$(echo "$dict" | jq --arg key "$project_name" --arg value "$project_dir" '. + {($key): $value}')
             fi
           fi
         done
-        
+
         # Output result as a single-line JSON object
         encoded_dict=$(echo "$dict" | jq -c '.')
-        
+
         echo "CHANGED_PROJECTS=$encoded_dict" >> "$GITHUB_OUTPUT"
 
     - name: Build and deploy Lambda functions
