--- a/.github/workflows/lambdas-mngd-env-deploy.yml
+++ b/.github/workflows/lambdas-mngd-env-deploy.yml
@@ -62,9 +62,9 @@ jobs:
         # Loop through all csproj files
         for project in $(find . -name '*.csproj'); do
           project_dir=$(dirname "$project")
-          echo project_dir
+          echo $project_dir
           project_name=$(basename "$project" .csproj)
-          echo project_name
+          echo $project_name
 
           if [[ "$project_name" == *Lambda ]]; then
             if git diff --name-only $diff_range | grep -q "^${project_dir#/}/"; then
