--- a/.github/workflows/lambdas-mngd-env-deploy.yml
+++ b/.github/workflows/lambdas-mngd-env-deploy.yml
@@ -62,11 +62,12 @@ jobs:
         # Loop through all csproj files
         for project in $(find . -name '*.csproj'); do
           project_dir=$(dirname "$project")
-          echo $project_dir
+          echo Project dir: $project_dir
           project_name=$(basename "$project" .csproj)
-          echo $project_name
 
           if [[ "$project_name" == *Lambda ]]; then
+            echo Found Lambda project: $project_name
+
             if git diff --name-only $diff_range | grep -q "^${project_dir#/}/"; then
               echo "Found changes in project: $project_name at $project_dir"
           
