--- a/.github/workflows/lambdas-mngd-env-deploy.yml
+++ b/.github/workflows/lambdas-mngd-env-deploy.yml
@@ -67,7 +67,7 @@ jobs:
           if [[ "$project_name" == *Lambda ]]; then
             echo Found Lambda project: $project_name
 
-            if git diff --name-only $diff_range | grep -q "^${project_dir#/}/"; then
+            if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -q "^$project_dir/"; then
               echo "Found changes in project: $project_name at $project_dir"
           
               # Append to JSON dictionary
