--- a/Rhyme.Net.Commands.CouponsForCampaignLambda/src/Rhyme.Net.Commands.CouponsForCampaignLambda/Rhyme.Net.Commands.CouponsForCampaignLambda.csproj
+++ b/Rhyme.Net.Commands.CouponsForCampaignLambda/src/Rhyme.Net.Commands.CouponsForCampaignLambda/Rhyme.Net.Commands.CouponsForCampaignLambda.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Amazon.Lambda.APIGatewayEvents" />
     <PackageReference Include="Amazon.Lambda.Core" />
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" />
+    <PackageReference Include="AWSSDK.Batch" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Rhyme.Net.Infrastructure\Rhyme.Net.Infrastructure.csproj" />
