--- a/.github/workflows/batch-image-deploy.yml
+++ b/.github/workflows/batch-image-deploy.yml
@@ -1,6 +1,9 @@
 name: Deploy .NET Console Apps (Batch Jobs) as Container Images to AWS ECR
 
 on:
+  push:
+    branches:
+      - main
   workflow_dispatch:
     inputs:
       environment:
