--- a/.github/workflows/batch-image-deploy.yml
+++ b/.github/workflows/batch-image-deploy.yml
@@ -90,7 +90,8 @@ jobs:
             echo "Processing short name: $short_name in directory $project_dir"
 
             # Build the Docker image
-            docker build -t $ECR_REPOSITORY:$short_name "$project_dir"
+            docker build -t $ECR_REPOSITORY:$short_name . 
+            # "$project_dir"
 
             # Tag 
             IMAGE_URI="${{ steps.login-ecr.outputs.registry }}/${ECR_REPOSITORY}:$short_name"
