--- a/Rhyme.Net.CouponsForCampaignJob/Dockerfile
+++ b/Rhyme.Net.CouponsForCampaignJob/Dockerfile
@@ -4,7 +4,7 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 COPY . .
-RUN dotnet restore Rhyme.Net.sln
+# RUN dotnet restore Rhyme.Net.sln
 RUN dotnet publish Rhyme.Net.CouponsForCampaignJob -c Release -o /app/publish
 
 FROM mcr.microsoft.com/dotnet/runtime:8.0 AS runtime
