--- a/.github/workflows/batch-image-deploy.yml
+++ b/.github/workflows/batch-image-deploy.yml
@@ -106,16 +106,16 @@ jobs:
             project_name=$(basename "$project_dir")
             echo "Project name: $project_name"
 
-            docker_image_name="${{ steps.login-ecr.outputs.registry }}/${ECR_REPOSITORY}:$short_name"
+            docker_image_name="${{ steps.login-ecr.outputs.registry }}/${ECR_REPOSITORY}:$short_name-$ENV"
             echo "Docker image name: $docker_image_name"
             
-            docker_build_context="$project_dir"
+            docker_build_context="."
             echo "Build context: $docker_build_context"
             
             docker_file="$project_dir/Dockerfile"
             echo "Docker file: $docker_file"
 
-            docker build -t "$docker_image_name" -f "$docker_file" .
+            docker build -t "$docker_image_name" -f "$docker_file" "$docker_build_context"
             aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin "${{ secrets.ECR_REPO_URL }}"
             docker push "$docker_image_name"
           done
