--- a/.github/workflows/batch-image-deploy.yml
+++ b/.github/workflows/batch-image-deploy.yml
@@ -106,7 +106,7 @@ jobs:
             project_name=$(basename "$project_dir")
             echo "Project name: $project_name"
 
-            docker_image_name="${{ steps.login-ecr.outputs.registry }}/${ECR_REPOSITORY}:$short_name-$ENV"
+            docker_image_name="${{ steps.login-ecr.outputs.registry }}/${ECR_REPOSITORY}:$short_name-${{ env.ENV }}"
             echo "Docker image name: $docker_image_name"
             
             docker_build_context="."
