--- a/.github/workflows/batch-image-deploy.yml
+++ b/.github/workflows/batch-image-deploy.yml
@@ -21,7 +21,8 @@ env:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-
+    environment: ${{ inputs.environment }}
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
