--- a/.github/workflows/batch-image-deploy.yml
+++ b/.github/workflows/batch-image-deploy.yml
@@ -22,7 +22,7 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -107,7 +107,7 @@ jobs:
             project_name=$(basename "$project_dir")
             echo "Project name: $project_name"
 
-            docker_image_name="${{ steps.login-ecr.outputs.registry }}/${ECR_REPOSITORY}:$short_name-${{ env.ENV }}"
+            docker_image_name="${{ steps.login-ecr.outputs.registry }}/${ECR_REPOSITORY}:$short_name-${{ vars.ENV }}"
             echo "Docker image name: $docker_image_name"
             
             docker_build_context="."
