Fixed job queue name, and job logging.

--- a/.github/workflows/batch-image-deploy.yml
+++ b/.github/workflows/batch-image-deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy .NET Console Apps (Batch Jobs) as Container Images to AWS ECR
+name: Deploy .NET Batch Jobs (Console Apps) as Container Images to AWS ECR
 
 on:
   push:
