--- a/Rhyme.Net.Infrastructure/Rhyme.Net.Infrastructure.csproj
+++ b/Rhyme.Net.Infrastructure/Rhyme.Net.Infrastructure.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="Ardalis.Specification.EntityFrameworkCore" />
     <PackageReference Include="Autofac" />
     <PackageReference Include="AWSSDK.DynamoDBv2" />
+    <PackageReference Include="AWSSDK.Batch" />
     <PackageReference Include="AWSSDK.SecretsManager" />
     <PackageReference Include="Azure.Identity" />
     <PackageReference Include="MediatR" />
