--- a/Rhyme.Net.CouponsForCampaignJob/Dockerfile
+++ b/Rhyme.Net.CouponsForCampaignJob/Dockerfile
@@ -1,17 +1,31 @@
-
-# Use SDK to build and publish
+# Use the .NET SDK to build the app
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 COPY . .
-RUN dotnet publish Rhyme.Net.CouponsForCampaignJob -c Release \
-    -r linux-x64 --self-contained true \
-    -o /app/publish
+RUN dotnet publish Rhyme.Net.CouponsForCampaignJob -c Release -o /app/publish
 
-# Use minimal base image since it's self-contained
-FROM mcr.microsoft.com/dotnet/runtime-deps:8.0-bookworm-slim
+# Use the .NET runtime to run the published app
+FROM mcr.microsoft.com/dotnet/runtime:8.0 AS runtime
 WORKDIR /app
 COPY --from=build /app/publish .
-ENTRYPOINT ["./Rhyme.Net.CouponsForCampaignJob"]
+ENTRYPOINT ["dotnet", "Rhyme.Net.CouponsForCampaignJob.dll"]
+
+
+
+# # Use SDK to build and publish
+# FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+# WORKDIR /src
+# COPY . .
+# RUN dotnet publish Rhyme.Net.CouponsForCampaignJob -c Release \
+#     -r linux-x64 --self-contained true \
+#     -o /app/publish
+
+# # Use minimal base image since it's self-contained
+# FROM mcr.microsoft.com/dotnet/runtime-deps:8.0-bookworm-slim
+# WORKDIR /app
+# COPY --from=build /app/publish .
+# ENTRYPOINT ["./Rhyme.Net.CouponsForCampaignJob"]
+
 
 
 # # FROM mcr.microsoft.com/dotnet/runtime:8.0 AS base
