--- a/Rhyme.Net.CouponsForCampaignJob/Dockerfile
+++ b/Rhyme.Net.CouponsForCampaignJob/Dockerfile
@@ -8,7 +8,11 @@ RUN dotnet publish Rhyme.Net.CouponsForCampaignJob -c Release -o /app/publish
 FROM mcr.microsoft.com/dotnet/runtime:8.0 AS runtime
 WORKDIR /app
 COPY --from=build /app/publish .
-ENTRYPOINT ["dotnet", "Rhyme.Net.CouponsForCampaignJob.dll"]
+
+ENTRYPOINT ["/bin/bash"]
+
+
+# ENTRYPOINT ["dotnet", "Rhyme.Net.CouponsForCampaignJob.dll"]
 
 
 
