Return the commands

--- a/Rhyme.Net.CouponsForCampaignJob/Dockerfile
+++ b/Rhyme.Net.CouponsForCampaignJob/Dockerfile
@@ -9,10 +9,8 @@ FROM mcr.microsoft.com/dotnet/runtime:8.0 AS runtime
 WORKDIR /app
 COPY --from=build /app/publish .
 
-ENTRYPOINT ["/bin/bash"]
-
-
-# ENTRYPOINT ["dotnet", "Rhyme.Net.CouponsForCampaignJob.dll"]
+# ENTRYPOINT ["/bin/bash"]
+ENTRYPOINT ["dotnet", "Rhyme.Net.CouponsForCampaignJob.dll"]
 
 
 
